updated readme and package.json

--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
-    "name": "chrome-extension-svelte-typescript-boilerplate",
+    "name": "abstractAI",
     "version": "3.0.0",
     "type": "module",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/nekitcorp/chrome-extension-svelte-typescript-boilerplate.git"
-    },
     "scripts": {
         "dev": "vite",
         "build": "vite build",
