--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "svelte-ts-extension-boilerplate",
-    "description": "Boilerplate for Chrome Extension Svelte Typescript project",
+    "name": "abstractAI",
+    "description": "AbstractAI extension",
     "version": "1.0",
     "manifest_version": 3,
     "icons": {
